UI[Header/Fix]: Fixed arrow overlapping on action menu.

--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -6,9 +6,10 @@
   &::before {
     content: '';
     position: absolute;
-    top: -10%;
-    right: 0;
-    border: 26px solid;
+    pointer-events: none;
+    top: -6%;
+    left: 84%;
+    border: 10px solid;
     border-color: transparent transparent #ffffff transparent;
   }
 
